[gd_scene load_steps=5 format=2]

[ext_resource path="res://coin-png-icon-3.png" type="Texture" id=1]
[ext_resource path="res://Coin.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "coin1",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 17.7475

[node name="Coin" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.07, 0.07 )
frames = SubResource( 1 )
animation = "coin1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="hit_coin" from="." to="." method="_update_score"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
